--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.2"
   }
