--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "comcigan-parser-typescript": "^2.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2"
   }
